Refactor library loading and error handling in RawConsoleInput, enhance URL encoding in FileResponse, and improve cache object handling in SimpleCache